--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.400.0",
     "next": "15.0.7",
